--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,19 @@
-aiodns==3.2.0
-async_timeout==4.0.3
-brotli==1.1.0
-brotlicffi==1.1.0.0
-chardet==5.2.0
-colorama==0.4.6
-ConfigParser==7.1.0
-cryptography==44.0.0
-docutils==0.21.2
-filelock==3.17.0
-gunicorn==23.0.0
-h2==4.2.0
-HTMLParser==0.0.2
-ipython==8.32.0
-ipywidgets==8.1.5
-jnius==1.1.0
-js==1.0
-keyring==25.6.0
-mask==1.0.0
-nacl==0.0.0
-orjson==3.10.15
-Pillow==11.1.0
-protobuf==5.29.3
-pyodide==0.0.2
-pyOpenSSL==25.0.0
-pytest==8.3.4
-redis==5.2.1
-simplejson==3.19.3
-Sphinx==8.1.3
-thread==2.0.5
-urllib3_secure_extra==0.1.0
-uvloop==0.21.0
-xmlrpclib==1.0.1
-zstandard==0.23.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+attrs==25.1.0
+audioop-lts==0.2.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+docopt==0.6.2
+frozenlist==1.5.0
+idna==3.10
+multidict==6.1.0
+nextcord==3.0.1
+pipreqs==0.4.13
+propcache==0.2.1
+requests==2.32.3
+typing_extensions==4.12.2
+urllib3==2.3.0
+yarg==0.1.10
+yarl==1.18.3
