--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
+Adafruit-Blinka==8.53.0
+adafruit-circuitpython-busdevice==5.2.11
+adafruit-circuitpython-connectionmanager==3.1.3
+adafruit-circuitpython-dht==4.0.7
+adafruit-circuitpython-requests==4.1.9
+adafruit-circuitpython-typing==1.11.2
+Adafruit-PlatformDetect==3.77.0
+Adafruit-PureIO==1.1.11
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aiosignal==1.3.2
 attrs==25.1.0
 audioop-lts==0.2.1
+binho-host-adapter==0.1.6
 certifi==2025.1.31
 charset-normalizer==3.4.1
 docopt==0.6.2
@@ -10,9 +19,12 @@ frozenlist==1.5.0
 idna==3.10
 multidict==6.1.0
 nextcord==3.0.1
-pipreqs==0.4.13
 propcache==0.2.1
+pyftdi==0.56.0
+pyserial==3.5
+pyusb==1.3.1
 requests==2.32.3
+sysv_ipc==1.1.0
 typing_extensions==4.12.2
 urllib3==2.3.0
 yarg==0.1.10
